k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speecher-prod
  labels:
    name: speecher-prod
    environment: production
