k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speecher
  labels:
    name: speecher
    environment: production
